--- a/backend/unified-service/build.gradle
+++ b/backend/unified-service/build.gradle
@@ -8,7 +8,6 @@ dependencies {
     
     // Data
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     
     // Monitoring
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
@@ -23,5 +22,8 @@ dependencies {
     
     // Email
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+    // Load .env files locally (so DB_USERNAME/DB_PASSWORD can come from .env without exporting)
+    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 }
 
