--- a/backend/unified-service/src/main/resources/application.yml
+++ b/backend/unified-service/src/main/resources/application.yml
@@ -14,22 +14,20 @@ spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
   datasource:
-    url: jdbc:postgresql://localhost:5432/autoapply
+    # Reads from environment variables OR from repo .env (loaded at startup).
+    # Prefer DB_URL if provided; otherwise compose from host/port/name.
+    url: ${DB_URL:jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:autoapply}}
     username: ${DB_USERNAME:postgres}
-    password: ${DB_PASSWORD:postgres}
+    password: ${DB_PASSWORD:}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: validate
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-  data:
-    redis:
-      host: ${REDIS_HOST:localhost}
-      port: ${REDIS_PORT:6379}
+        format_sql: false
   mail:
     host: ${MAIL_HOST:smtp.gmail.com}
     port: ${MAIL_PORT:587}
@@ -66,7 +64,7 @@ management:
 
 logging:
   level:
-    com.autoapply: DEBUG
+    com.autoapply: INFO
     org.springframework.web: INFO
 
 cors:
