--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@
 #############################################
 
 # Database
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_USERNAME=seetharam
+DB_PASSWORD=su
 
 # JWT
 # Use a strong secret in production (>= 256 bits of entropy).
