--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,14 +29,21 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     
     // Database
     runtimeOnly 'org.postgresql:postgresql'
+    
+    // Database Migration
+    implementation 'org.flywaydb:flyway-core'
     
     // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+    
+    // Dotenv support for .env file loading
+    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
     
     // Lombok (optional but helpful)
     compileOnly 'org.projectlombok:lombok'
