--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,30 +17,28 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 
+# Flyway Configuration (Database Migrations)
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.validate-on-migrate=true
+
 # JWT Configuration
 jwt.secret=${JWT_SECRET:change-me-to-a-strong-secret-key-minimum-256-bits}
 jwt.expiration-ms=86400000
 
-# OAuth2 Configuration
+# OAuth2 Configuration (optional - only enabled if Google client ID is provided)
+# Set GOOGLE_CLIENT_ID and GOOGLE_CLIENT_SECRET as environment variables
+# If client ID is not set, these properties will be empty and OAuth2 will be disabled
+# Note: OAuth2 auto-configuration is excluded to prevent validation errors when client ID is empty
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID:}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET:}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
-spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID:}
-spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET:}
-spring.security.oauth2.client.registration.github.scope=read:user,user:email
-spring.security.oauth2.client.registration.github.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
-
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v2/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=email
-
-spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
-spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
-spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
-spring.security.oauth2.client.provider.github.user-name-attribute=login
 
 # CORS Configuration
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,chrome-extension://*,moz-extension://*,edge-extension://*}
