Implement initial job application tracking system including React frontend, Spring Boot backend, and job link parsing.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,11 @@
     "react-router-dom": "^6.20.0",
     "axios": "^1.6.2",
     "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.1.1"
+    "@heroicons/react": "^2.1.1",
+    "recharts": "^2.10.3",
+    "framer-motion": "^10.16.5",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
